# librevenge

./: .gitignore  configure.ac
data/gdb/librevenge/v0_0/: types.py
inc/librevenge/: RVNGDrawingInterface.h  RVNGPresentationInterface.h  RVNGPropertyListVector.h  RVNGSVGDrawingGenerator.h  RVNGSpreadsheetInterface.h  RVNGTextInterface.h
inc/librevenge-generators/: RVNGCSVSpreadsheetGenerator.h  RVNGHTMLTextGenerator.h  RVNGRawDrawingGenerator.h  RVNGRawPresentationGenerator.h  RVNGRawSpreadsheetGenerator.h  RVNGRawTextGenerator.h  RVNGSVGPresentationGenerator.h  RVNGTextDrawingGenerator.h  RVNGTextPresentationGenerator.h  RVNGTextSpreadsheetGenerator.h  RVNGTextTextGenerator.h
inc/librevenge-stream/: RVNGDirectoryStream.h  RVNGStreamImplementation.h
src/fuzz/: Makefile.am  commonfuzzer.cpp
src/lib/: RVNGBinaryData.cpp  RVNGCSVSpreadsheetGenerator.cpp  RVNGDirectoryStream.cpp  RVNGHTMLTextGenerator.cpp  RVNGHTMLTextTableStyle.cpp  RVNGHTMLTextTextStyle.cpp  RVNGHTMLTextTextStyle.h  RVNGMemoryStream.h  RVNGOLEStream.cpp  RVNGProperty.cpp  RVNGPropertyList.cpp  RVNGSVGDrawingGenerator.cpp  RVNGSVGPresentationGenerator.cpp  RVNGStreamImplementation.cpp  RVNGString.cpp  RVNGZipStream.cpp
src/test/: RVNGStreamTest.cpp  RVNGStringTest.cpp
